# str_indices

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: all.rs
benches/text/: c_1000.txt  en_10.txt  en_100.txt  en_1000.txt  jp_1000.txt  jp_102.txt  lines.txt
fuzz/: Cargo.toml
fuzz/artifacts/random_strings/: crash-fc48059d28c22e5caef32e47ce547de9c3675f18
fuzz/fuzz_targets/: random_strings.rs
src/: byte_chunk.rs  chars.rs  lib.rs  lines.rs  lines_crlf.rs  lines_lf.rs  utf16.rs
tests/: proptests_chars.rs  proptests_lines.rs  proptests_lines_crlf.proptest-regressions  proptests_lines_crlf.rs  proptests_lines_lf.rs  proptests_utf16.rs
