[package]
name = "str_indices"
version = "0.4.4"
edition = "2021"
rust-version = "1.65"
authors = ["Nathan Vegdahl <cessen@cessen.com>"]
description = "Count and convert between indexing schemes on string slices."
documentation = "https://docs.rs/str_indices"
repository = "https://github.com/cessen/str_indices"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["text", "string", "nostd"]
categories = ["text-processing"]

exclude = ["tests/", "benches/text/", ".github/"]

[features]
default = ["simd"]
simd = [] # Enable explicit SIMD optimizations on supported platforms.

[dependencies]

[dev-dependencies]
proptest = "~1.6"
criterion = { version = "0.3", features = ["html_reports"] }

# This is a transitive dependency of criterion--we don't use it directly. We
# lock it to this exact version because newer versions don't work on our MSRV,
# and thus CI fails if it's on a newer version.
unicode-width = "=0.1.13"

[profile.release]
lto = "thin"

#-----------------------------------------

[[bench]]
name = "all"
harness = false
